# audio-content-based-playlists-essentia

./: .gitignore  Analysis Report.md  README.md  Report.md  analyse_music.py  analysis_report.ipynb  audio_analysis.py  playlist_generation.py  playlist_generation_basic.py  pyproject.toml  report.py  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: audio_analysis.ipynb
playlist_generation/: main.py  music_library.py  ui_components.py  utils.py
reports/: all_styles_distribution.tsv  threshold_styles_distribution.tsv
results/audio_chunks/audio.000/02/: 02KPo7DqVnSTSZnKvdT5NU.json  02dMF381tQaidG17In1Tt2.json
results/audio_chunks/audio.000/03/: 03YAkNt5ctr4vQwqmNPybe.json  03m6QzQ3fobO9rPbyeOITY.json
results/audio_chunks/audio.000/05/: 05eCcZUJOKWHlfzZ0gc5tD.json
results/audio_chunks/audio.000/09/: 09CBtea7lD0P0xgdXXjqFS.json
results/audio_chunks/audio.000/0B/: 0BJPGg90E6p2Ve0D8EcZGF.json
results/audio_chunks/audio.000/0D/: 0DsayAlGIWXAu09gIDQkK7.json  0DtX3R3GvJddY3d05z67mC.json  0DxjMZ5MXWX9qHnrayyFQh.json  0dQPkfweyWDzZ20Auq3F14.json
results/audio_chunks/audio.000/0E/: 0EKBV6GybPtALXUgWqWrym.json
results/audio_chunks/audio.000/0J/: 0JJi5lar3rSSrqSqYys409.json  0JyuEt2VTlBvGMBrM1XJ5x.json  0j7vtY0hDbtbGYyhDNCsKr.json
results/audio_chunks/audio.000/0M/: 0M8wD2qktUycFqdSaYwOLE.json
results/audio_chunks/audio.000/0S/: 0SIooo95Kba3UwPBRUOcmd.json  0SafwrAO6b3wCtkDatNdux.json
results/audio_chunks/audio.000/0T/: 0TCpG3VIWer2cpIuS7cZGU.json  0TbUiIrVj9QmFTGlgoLc95.json  0trHOzAhNpGCsGBEu7dOJo.json
results/audio_chunks/audio.000/0V/: 0VBrgzzfLrfyJ0aIZ63DIa.json  0VygR6ax8MWew7vLZsY9Yr.json
results/audio_chunks/audio.000/0Y/: 0YxrPdW9NpNFtqh7Fw0rva.json
(+2070 files in other folders)
