[project]
name = "essentia-playlists"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy<2.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.42.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
